--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -259,6 +259,12 @@ table.custom-table tr td {
   z-index: 5;
 }
 
+@media screen and (max-width: 1366px) {
+  #navbar-sm .logo img {
+    width: 88px;
+  }
+}
+
 #navbar-sm.notification-navbar {
   padding-left: 7rem;
   padding-right: 7rem;
@@ -297,6 +303,15 @@ table.custom-table tr td {
 
 #navbar-sm.sm {
   padding-bottom: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+  #navbar-sm.blogs {
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
 }
 
 #financial-planning-abbr abbr {
@@ -1322,9 +1337,31 @@ table.custom-table tr td {
           transform: translate(-50%, -50%);
 }
 
+@media screen and (max-width: 768px) {
+  #uploader .file-uploader .text-yellow.fw-bold {
+    text-transform: capitalize;
+  }
+}
+
 @media screen and (min-width: 992px) {
   #uploader .text-end.text-light-2 {
     padding-right: 2.5rem !important;
+  }
+}
+
+@media screen and (min-width: 1367px) {
+  #blogs {
+    margin-top: 2rem;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 1585px) and (min-width: 1367px) {
+  #blogs {
+    padding-left: 7rem !important;
+    padding-right: 7rem !important;
+    margin-left: unset;
+    margin-right: unset;
   }
 }
 
@@ -1342,12 +1379,19 @@ table.custom-table tr td {
 
 @media screen and (max-width: 1500px) {
   #blogs.page-container {
+    padding-left: 7rem !important;
+    padding-right: 7rem !important;
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  #blogs.page-container {
     padding-left: 5rem !important;
     padding-right: 5rem !important;
   }
 }
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 768px) {
   #blogs.page-container {
     padding-left: 2rem !important;
     padding-right: 2rem !important;
@@ -1359,6 +1403,11 @@ table.custom-table tr td {
     padding-left: 1.5rem !important;
     padding-right: 1.5rem !important;
   }
+}
+
+#blogs aside {
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 @media screen and (max-width: 1100px) {
@@ -1501,6 +1550,12 @@ table.custom-table tr td {
   font-weight: 600;
 }
 
+@media screen and (max-width: 768px) {
+  .refer-and-invest-right .lower-content {
+    padding-top: 80px !important;
+  }
+}
+
 #refer-and-invest .btn {
   height: 56px;
   padding: 0 3.25rem;
@@ -1517,9 +1572,16 @@ table.custom-table tr td {
   display: none;
 }
 
+@media screen and (min-width: 1367px) {
+  #refer-and-invest .title {
+    margin-top: 1rem;
+  }
+}
+
 @media screen and (min-width: 769px) {
   #refer-and-invest .title {
-    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+    border-bottom: 1px solid #e6e7e8;
   }
 }
 
@@ -1725,6 +1787,12 @@ table.custom-table tr td {
   }
 }
 
+@media screen and (max-width: 768px) {
+  #refer-and-invest .cards .card .img {
+    margin-right: 10%;
+  }
+}
+
 @media screen and (max-width: 575px) {
   #refer-and-invest .cards .card .img {
     width: 100%;
@@ -1746,6 +1814,12 @@ table.custom-table tr td {
 @media screen and (max-width: 1366px) {
   #refer-and-invest .cards .card .img img {
     width: 120px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  #refer-and-invest .cards .card .img img {
+    width: 111px;
   }
 }
 
@@ -1836,12 +1910,6 @@ table.custom-table tr td {
   }
 }
 
-@media screen and (max-width: 991px) {
-  #refer-and-invest .cards .card .text .sub-section .small-text.other-card {
-    min-height: unset;
-  }
-}
-
 @media screen and (max-width: 1809px) and (min-width: 1367px) {
   #refer-and-invest .cards .card .text .sub-section .small-text {
     font-size: 16px !important;
@@ -1865,6 +1933,10 @@ table.custom-table tr td {
     margin-bottom: 0 !important;
     min-height: 40px;
   }
+}
+
+#refer-and-invest .cards .card .text .sub-section .small-text.other-card {
+  min-height: unset;
 }
 
 @media screen and (max-width: 1809px) and (min-width: 1367px) {
@@ -2072,6 +2144,12 @@ table.custom-table tr td {
   }
 }
 
+@media screen and (max-width: 1366px) and (min-width: 769px) {
+  #refer-and-invest .cards .card .text.refer .social {
+    margin-top: 2rem !important;
+  }
+}
+
 #refer-and-invest .cards .card .text.refer .social a {
   margin-right: 1.25rem;
 }
@@ -2097,6 +2175,18 @@ table.custom-table tr td {
 }
 
 @media screen and (max-width: 650px) {
+  #refer-and-invest .cards .card .text.refer .social a {
+    width: 24px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  #refer-and-invest .cards .card .text.refer .social a {
+    width: 32px;
+  }
+}
+
+@media screen and (max-width: 350px) {
   #refer-and-invest .cards .card .text.refer .social a {
     width: 24px;
   }
@@ -2171,7 +2261,7 @@ table.custom-table tr td {
 @media screen and (max-width: 768px) {
   .transactions-sidenav-right .lower-content,
   .transactions-right .lower-content {
-    padding-top: 106px !important;
+    padding-top: 80px !important;
   }
 }
 
@@ -2199,7 +2289,7 @@ table.custom-table tr td {
 }
 
 .transactions-right .title .back {
-  top: 1rem !important;
+  top: 0.75rem !important;
 }
 
 #transactions .title {
@@ -2259,7 +2349,7 @@ table.custom-table tr td {
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   #transactions .search-sm {
     width: 20px;
   }
@@ -2272,7 +2362,7 @@ table.custom-table tr td {
   border-color: #e8e8e8;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 768px) {
   #transactions .search-sm input {
     width: 20px;
     opacity: 0;
@@ -2407,7 +2497,7 @@ table.custom-table tr td {
 }
 
 #transactions .transactions-body .transaction > *:nth-child(3) {
-  width: 20%;
+  width: 25%;
 }
 
 @media screen and (max-width: 1590px) {
@@ -2486,7 +2576,7 @@ table.custom-table tr td {
   width: 48px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1366px) {
   #transactions .transactions-body .transaction .details img {
     width: 32px;
   }
@@ -2520,7 +2610,7 @@ table.custom-table tr td {
 
 @media screen and (max-width: 1366px) {
   #transactions .transactions-body .transaction .status .btn {
-    font-size: 11px;
+    font-size: 12px;
     width: 72px;
     height: 24px;
     padding-left: 0;
@@ -2876,8 +2966,10 @@ table.custom-table tr td {
   }
 }
 
-.notifications-sidenav-right .lower-content {
-  padding-top: 70px !important;
+@media screen and (max-width: 768px) {
+  .notifications-sidenav-right .lower-content {
+    padding-top: 70px !important;
+  }
 }
 
 #notifications {
@@ -2926,7 +3018,7 @@ table.custom-table tr td {
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   #notifications .head {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
